# cad-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  REQUIREMENTS.md  SPEC.md  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml
examples/models/: box.py  cube.py  hole_plate.py  verification_block.py
src/cad_cli/: __init__.py  _build_worker.py  artifacts.py  build.py  cli.py  compare.py  errors.py  geometry.py  inspect.py  package.py  render.py  schemas.py
src/cad_cli/blender/: __init__.py  render_glb.py
tests/: conftest.py  test_cli_unit.py  test_inspect.py  test_integration.py  test_render.py
